# minitrino

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint  Makefile  REST_API_GUIDE.md  install.sh  pyproject.toml  readme.md
.github/: dependabot.yaml
.github/actions/cleanup-disk/: action.yml
.github/actions/get-cluster-version/: action.yml
.github/actions/prepare-test-matrix/: action.yaml  action.yml
.github/actions/pull-test-image/: action.yaml  action.yml
.github/actions/setup-docker-build/: action.yaml  action.yml
.github/actions/setup-image-pull/: action.yaml
.github/actions/setup-test-environment/: action.yaml  action.yml
.github/actions/wait-for-test-release/: action.yaml
.github/workflows/: branch-release.yml  build-test-images.yaml  ci.yaml  cleanup-test-images.yaml  cli-tests.yaml  cli-tests.yml  dummy-release.yml  lib-tests-sep.yaml  lib-tests-trino.yaml  lib-tests.yaml  lib-tests.yml  release.yaml  release.yml  smoke-test.yaml  test-release.yaml  test-release.yml  tests.yml  update-version-files.yaml  update-version-files.yml
.local/: ideas.md  useful-commands.sh
.precommit/: gen_docs_requirements.py  run-vulture.sh  sync_cluster_version.py  sync_version_files.py  update_switcher_json.py  validate_pytest_collection.sh
cli/: setup.py
cli/minipresto/: cli.py  components.py  core.py  errors.py  exceptions.py  settings.py  utils.py
cli/minipresto/cmd/: cmd_config.py  cmd_down.py  cmd_lib_install.py  cmd_modules.py  cmd_provision.py  cmd_remove.py  cmd_snapshot.py  cmd_version.py
cli/minipresto/commands/: cmd_config.py  cmd_down.py  cmd_provision.py  cmd_remove.py  cmd_snapshot.py  cmd_version.py  core.py
cli/minipresto/test/: helpers.py  runner.py  test_cmd_config.py  test_cmd_down.py  test_cmd_lib_install.py  test_cmd_modules.py  test_cmd_provision.py  test_cmd_remove.py  test_cmd_snapshot.py  test_cmd_version.py  test_config.py  test_daemon_off.py  test_down.py  test_misc.py  test_modules.py  test_provision.py  test_remove.py  test_snapshot.py
cli/minitrino/: cli.py  components.py  settings.py  utils.py
docs/: conf.py  docker-compose.yml  home.md  index.md  requirements.txt
docs/_static/: custom-icons.js  custom.css  switcher.json
docs/_templates/: custom-template.html  edit-this-page.html  navbar-version.html
docs/api/: index.rst  minitrino.ansi.rst  minitrino.cli.rst  minitrino.cmd.config.rst  minitrino.cmd.down.rst  minitrino.cmd.exec.rst  minitrino.cmd.lib_install.rst  minitrino.cmd.modules.rst  minitrino.cmd.provision.rst  minitrino.cmd.remove.rst  minitrino.cmd.resources.rst  minitrino.cmd.restart.rst  minitrino.cmd.rst  minitrino.cmd.snapshot.rst  minitrino.core.cluster.cluster.rst  minitrino.core.cluster.config.rst  minitrino.core.cluster.ops.rst  minitrino.core.cluster.ports.rst  minitrino.core.cluster.provisioner.rst  minitrino.core.cluster.resource.rst  minitrino.core.cluster.rst  minitrino.core.cluster.validator.rst  minitrino.core.cmd_exec.rst  minitrino.core.context.rst  minitrino.core.docker.rst  minitrino.core.docker.socket.rst  minitrino.core.docker.wrappers.rst  minitrino.core.envvars.rst  minitrino.core.errors.rst  minitrino.core.exec.cmd.rst  minitrino.core.exec.container.rst  minitrino.core.exec.host.rst  minitrino.core.exec.result.rst  minitrino.core.exec.rst  minitrino.core.exec.utils.rst  minitrino.core.library.rst  minitrino.core.logging.common.rst  minitrino.core.logging.formatter.rst  minitrino.core.logging.handler.rst  minitrino.core.logging.levels.rst  (+12 more)
docs/get-started/: index.md
docs/modules/: index.md
docs/modules/admin/: scim.md  (+13 more)
img/: minitrino.psd
install/docs/: .env  Dockerfile  docker-compose.yaml  docker-compose.yml  docs-build.sh
install/src/: install.sh
lib/: .env  Dockerfile  docker-compose.yml  minipresto.env  minitrino.env
lib/dockerfile-resources/: configure.sh  wait-for-it.sh
lib/image/: Dockerfile
release-notes/: 1.0.0.md  1.0.2.md  2.0.0.md  2.0.1.md  2.0.3.md  2.0.4.md  2.0.5.md  2.0.6.md  2.0.8.md  2.1.2.md  2.1.4.md  2.1.5.md  2.1.6.md  2.1.8.md  2.1.9.md  2.2.0.md  2.2.1.md  2.2.2.md  2.2.3.md  2.2.4.md  3.0.0.md  3.0.1.md  3.0.2.md  3.0.3.md  _template.md  template.md
release-notes/archive/: 1.0.0.md  1.0.1.md  1.0.2.md  2.0.0.md  2.0.1.md  2.0.2.md  2.0.3.md  2.0.4.md  2.0.5.md  2.0.6.md  2.0.7.md  2.0.9.md  2.1.0.md  2.1.1.md  2.1.2.md  2.1.3.md  2.1.4.md  2.1.6.md  2.1.7.md  2.2.2.md  2.2.4.md
src/cli/: setup.py
src/lib/: docker-compose.yaml  docker-compose.yml  minitrino.env  version
src/test/: common.py  pyproject.toml  setup.py
src/test/cli/: conftest.py  constants.py  runner.py  test_auto_library.py  test_cmd_config.py  test_cmd_down.py  test_cmd_exec.py  test_cmd_lib_install.py  test_cmd_modules.py  test_cmd_provision.py  test_cmd_remove.py  test_cmd_resources.py  test_cmd_restart.py  test_cmd_snapshot.py  test_cmd_version.py  test_core_library.py  test_misc.py  test_telemetry.py  test_utils.py  test_version.py  utils.py
src/test/cli/integration_tests/: test_library_manager.py
src/test/lib/: runner.py  specs.py  utils.py
src/test/lib/json/: biac.json  cache-service.json  hive.json  iceberg.json  insights.json  mariadb.json  mysql-event-listener.json  password-file.json  postgres.json  tls.json
src/test/src/: common.py
src/test/src/cli/: helpers.py  runner.py  test_cmd_config.py  test_cmd_down.py  test_cmd_lib_install.py  test_cmd_modules.py  test_cmd_provision.py  test_cmd_remove.py  test_cmd_restart.py  test_cmd_snapshot.py  test_cmd_version.py  test_misc.py  utils.py
src/test/src/lib/: helpers.py  runner.py  specs.py  utils.py
src/test/src/lib/json/: biac.json  cache-service.json  clickhouse.json  data-products.json  delta-lake.json  elasticsearch.json  faker.json  file-access-control.json  file-group-provider.json  hive.json  iceberg.json  insights.json  ldap.json  mariadb.json  mysql-event-listener.json  mysql.json  oauth2.json  pinot.json  postgres.json  resource-groups.json  results-cache.json  session-property-manager.json  sqlserver.json  tls.json
src/tests/: __init__.py  common.py  pyproject.toml
(+687 files in other folders)
