[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minitrino"
version = "3.0.0"
description = "A command line tool that makes it easy to run modular Trino environments locally."
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Jeff Lester", email = "jeff.lester.dev@gmail.com"}
]
urls = {"Homepage" = "https://github.com/jefflester/minitrino"}
keywords = ["trino", "starburst", "docker", "minitrino"]

dependencies = [
  "docker==7.1.0",
  "click==8.1.8",
  "colorama",
  "humanize",
  "jsonschema",
  "python-dateutil",
  "PyYAML",
  "requests>=2.32.2",
  "tabulate"
]

[project.scripts]
minitrino = "minitrino.cli:cli"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "furo",
  "isort",
  "mypy",
  "myst_parser",
  "pydocstyle",
  "setuptools",
  "sphinx",
  "sphinx_copybutton",
  "sphinxext-opengraph",
  "tomli",
  "types-click",
  "types-docker",
  "types-PyYAML",
  "types-jsonschema",
  "types-setuptools",
  "types-tabulate",
  "types-python-dateutil",
  "wheel",
  "yamllint"
]

[tool.setuptools]
package-dir = {"" = "src/cli"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]
known_first_party = ["minitrino", "tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[tool.pydocstyle]
convention = "numpy"
