[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Jeff Lester", email = "jeff.lester.dev@gmail.com"}
]
description = "A command line tool that makes it easy to run modular Trino environments locally."
dependencies = [
  "PyYAML",
  "click==8.1.8",
  "colorama",
  "docker==7.1.0",
  "humanize",
  "jsonschema",
  "python-dateutil",
  "requests>=2.32.2",
  "tabulate"
]
keywords = ["docker", "minitrino", "starburst", "trino"]
license = {text = "Apache-2.0"}
name = "minitrino"
readme = "readme.md"
requires-python = ">=3.10"
urls = {"Homepage" = "https://github.com/jefflester/minitrino"}
version = "3.0.0"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pydocstyle",
  "setuptools",
  "tomli",
  "types-click",
  "types-docker",
  "types-jsonschema",
  "types-PyYAML",
  "types-python-dateutil",
  "types-setuptools",
  "types-tabulate",
  "wheel",
  "yamllint"
]
docs = [
  "ablog",
  "myst_parser",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-click",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-favicon",
  "sphinx-togglebutton",
  "sphinxext-opengraph"
]

[project.scripts]
minitrino = "minitrino.cli:cli"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
known_first_party = ["minitrino", "tests"]
line_length = 88
profile = "black"
src_paths = ["src"]

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
mypy_path = "src"
python_version = "3.10"

[tool.pydocstyle]
convention = "numpy"

[tool.setuptools]
package-dir = {"" = "src/cli"}
