[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Jeff Lester", email = "jeff.lester.dev@gmail.com"}
]
description = "A command line tool that makes it easy to run modular Trino environments locally."
dependencies = [
  "PyYAML>=6.0.1",
  "click==8.3.1",
  "docker==7.1.0",
  "humanize",
  "jsonschema>=4.18.0",
  "python-dateutil",
  "requests>=2.32.2",
  "tabulate"
]
keywords = ["docker", "minitrino", "starburst", "trino"]
license = {text = "Apache-2.0"}
name = "minitrino"
readme = "readme.md"
requires-python = ">=3.10.12"
urls = {"Homepage" = "https://github.com/jefflester/minitrino"}
version = "3.0.3"

[project.optional-dependencies]
dev = [
  "bandit",
  "deptry",
  "docformatter",
  "mdformat",
  "mdformat-gfm",
  "mdformat-myst",
  "mypy",
  "pre-commit",
  "pydocstyle",
  "ruff",
  "setuptools",
  "tomli",
  "types-click",
  "types-docker",
  "types-jsonschema",
  "types-PyYAML",
  "types-python-dateutil",
  "types-setuptools",
  "types-tabulate",
  "vulture",
  "wheel",
  "yamllint"
]
docs = [
  "ablog",
  "myst_parser",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-click",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-favicon",
  "sphinx-togglebutton",
  "sphinxext-opengraph"
]

[project.scripts]
minitrino = "minitrino.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
  "ASYNC",  # flake8-async
]
ignore = [
  # Note: E203 and W503 are not needed in Ruff (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/tests/**" = ["E501"]  # Allow long lines in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
mypy_path = "src"
python_version = "3.10"

[tool.pydocstyle]
convention = "numpy"

[tool.deptry]
exclude = [
  "src/tests",
  "docs",
  ".precommit",
]
extend_exclude = [
  "venv",
  ".venv",
  "build",
  "dist",
  ".eggs",
]
# Tell deptry that dev and docs dependencies are for tooling, not code imports
pep621_dev_dependency_groups = ["dev", "docs"]
# Known first-party packages (not transitive)
known_first_party = ["minitrino", "tests"]

[tool.setuptools]
package-dir = {"" = "src/cli"}
